chatbot updated
